install gh-pages

--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "meteorites",
   "version": "0.1.0",
+  "homepage": "https://nikrb.github.io/fcc-meteorites",
   "private": true,
   "devDependencies": {
     "react-scripts": "1.0.10"
   },
   "dependencies": {
     "d3": "^4.10.0",
+    "gh-pages": "^1.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
